@@ -5,7 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
+<<<<<<< HEAD
     <artifactId>TO2</artifactId>
+=======
+    <artifactId>TO</artifactId>
+>>>>>>> 3df5676f381b3e86d926941b98097cda92e8347a
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,5 +17,21 @@
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+<<<<<<< HEAD
+=======
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+>>>>>>> 3df5676f381b3e86d926941b98097cda92e8347a
 
 </project>
